--- a/scss/_helpers.scss
+++ b/scss/_helpers.scss
@@ -156,3 +156,12 @@
 .mb-10 {
     margin-bottom: 10rem;
 }
+.mt-4 {
+    margin-top: 4rem;
+}
+.mt-10 {
+    margin-top: 10rem;
+}
+.mt-25 {
+    margin-top: 2,5rem;
+}
