--- a/scss/pages/home.scss
+++ b/scss/pages/home.scss
@@ -90,6 +90,14 @@ section {
         margin-bottom: 1rem;
      }
 }
+.link-ajax {
+    color: darkgrey;
+    text-decoration: underline;
+    &:hover {
+        color: black;
+        text-decoration: underline;
+    }
+}
 .img-development {
     @media (max-width: $screen-sm){
         width: 100%;
